# alienx

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/ai/: __init__.py  functions.py  llm.py
src/utils/: tts.py
src/voice/: __init__.py  recorder.py
